--- a/client/login.html
+++ b/client/login.html
@@ -7,44 +7,34 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="../client/css/register.css">
-    <title>register!</title>
+    <link rel="stylesheet" href="./css/login.css">
+    <title>login</title>
   </head>
   <body>
-    <h1>register!</h1>
-
-    <form id="myform">
-        <!-- userName input -->
-         <div data-mdb-input-init class="form-outline mb-4">
-    <input type="name" id="username" class="form-control" />
-    <label class="form-label" for="username">User Name</label>
-  </div>
-
+    <h1>login</h1>
+    <form id="loginform">
   <!-- Email input -->
   <div data-mdb-input-init class="form-outline mb-4">
     <input type="email" id="email" class="form-control" />
-    <label class="form-label" for="email">Email address</label>
+    <label class="form-label" for="form2Example1">Email address</label>
   </div>
 
   <!-- Password input -->
   <div data-mdb-input-init class="form-outline mb-4">
     <input type="password" id="password" class="form-control" />
-    <label class="form-label" for="password">Password</label>
+    <label class="form-label" for="form2Example2">Password</label>
   </div>
 
-  <!-- confirm password -->  
-  <div data-mdb-input-init class="form-outline mb-4">
-    <input type="password" id="confirmPassword" class="form-control" />
-    <label class="form-label" for="confirmPassword">confirm Password</label>
-  </div>
+  <!-- 2 column grid layout for inline styling -->
+ 
 
   <!-- Submit button -->
-  <button  type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-block mb-4">Sign up</button>
+  <button  type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-block mb-4">Sign in</button>
 
   <!-- Register buttons -->
   <div class="text-center">
-    <p>already a member? <a href="./login.html">login</a></p>
-    
+    <p>Not a member? <a href="./register.html">Register</a></p>
+
     <button  type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-link btn-floating mx-1">
       <i class="fab fa-facebook-f"></i>
     </button>
@@ -73,6 +63,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     -->
-    <script src="../client/js/register.js"></script>
+    <script src="./js/login.js"></script>
   </body>
 </html>
