building admin dashboard  deleting users

--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -10,6 +10,21 @@
     <div id="userRole"></div>
     <a href="home.html">logOut</a>
 
+    <table border="2" id="userTable">
+        <thead>
+            <tr>
+                <th>ID</th>
+                  <th>Name</th>
+                    <th>Email</th>
+                      <th>Role</th>
+                        <th>action</th>
+            </tr>
+        </thead>
+        <tbody id="userBody">
+            <!-- users will be renderd here -->
+        </tbody>
+    </table>
+
 
     <script src="./js/dashboard.js"></script>
 </body>
