--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <title>dashboard!</title>
 </head>
 <body>
     <h1>welcome in dashboard Admin</h1>
-    <div id="userRole"></div>
+    <!-- <div id="userRole"></div> -->
     <a href="home.html">logOut</a>
 
     <table border="2" id="userTable">
@@ -25,7 +26,46 @@
         </tbody>
     </table>
 
+    <!-- Button trigger modal -->
 
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form id="updatedataform">
+            <div class="mb-3">
+            <label for="userName" class="col-form-label">userName:</label>
+            <input type="text" class="form-control" id="userName">
+            </div>
+             <div class="mb-3">
+            <label for="userEmail" class="col-form-label">userEmail:</label>
+            <input type="text" class="form-control" id="userEmail">
+            </div>
+             <div class="mb-3">
+            <label for="userRole" class="col-form-label">userRole:</label>
+            <input type="text" class="form-control" id="userRole">
+            </div>
+            <div class="mb-3">
+            <input type="hidden" class="form-control" id="userId">
+            </div>
+               <button type="submit" class="btn btn-primary">Save changes</button>
+        </form>
+      </div>
+      <div class="modal-footer">
+     
+      </div>
+    </div>
+  </div>
+</div>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js" integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y" crossorigin="anonymous"></script>
     <script src="./js/dashboard.js"></script>
 </body>
 </html>
