Admin create form in dashboard

--- a/client/profile.html
+++ b/client/profile.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <button id="logout">logout</button>
+     <button id="dashboard">go to dashboard</button>
     <h1>user profile</h1>
     <div id="userProfile">
         <p><strong>userName : </strong> <span id="userName"></span></p>
