appending products to table and deleteting items

--- a/client/productsDash.html
+++ b/client/productsDash.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <h1>wellcom to products dashboard</h1>
-    <button>click</button>
-    <button>click</button>
+    <button>Add Product</button>
+    <button>find by name</button>
+    <button>greater than / less than</button>
     <br>
     <table border="2">
         <thead>
@@ -19,6 +20,7 @@
                 <th>catagory</th>
                 <th>peice</th>
                 <th>image url</th>
+                <th>Action</th>
             </tr>
         </thead>
         <tbody id="productTable">
