--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -15,6 +15,7 @@
 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newuserModal">
   add user
 </button>
+<a href="productsDash.html">products dashboard</a>
 
 <!-- Modal -->
 <div class="modal fade" id="newuserModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
