trying to filter products upon catagories

--- a/client/home.html
+++ b/client/home.html
@@ -12,6 +12,12 @@
     <h3>you have been redirected here cuz you are not an admin !!</h3>
     <br>
     <br>
+    <label for="categorySelect">select catagory :</label>
+    <select id="categorySelect" name="catagory">
+        <option value="all">select catagory</option>
+    </select>
+    <br>
+    <br>
     <div id="main-div-card">
     <!-- <div class="card" style="width: 18rem;">
   <img src="..." class="card-img-top" alt="...">
