--- a/client/productsDash.html
+++ b/client/productsDash.html
@@ -36,7 +36,7 @@
             <input type="text" class="form-control" id="addprice">
             </div>
                <div class="mb-3">
-            <label for="addcatagory" class="col-form-label">catagory:</label>
+            <label for="catagory" class="col-form-label">catagory:</label>
             <select id="catagory" required>
               <option value="">select catagory</option>
             </select>
