updates on margins

--- a/client/homeProject.html
+++ b/client/homeProject.html
@@ -55,9 +55,11 @@
             <h1>collection</h1>
             <p>sumer</p>
             <p>2025</p>
-            <button id="para-btn">Go To Shop    
-                <span class=" bi-arrow-right"></span>
+            <button id="para-btn">Go To Shop
+                 <span style="font-size: 25px; margin-left: 30px;"> &#8594; </span>
+                <!-- <span class=" bi-arrow-right"> </span> -->
             </button>
+            
          <button class="carousel-control-btn" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
     <span class="bi bi-arrow-right-square"></span>
   </button>
