adding sections and adjusments

--- a/client/homeProject.html
+++ b/client/homeProject.html
@@ -96,8 +96,11 @@
      <br>
      <br>
      <!-- New this week section -->
-      <h1 id="margn-bttm">New</h1>
+      <div style="margin-left: 20px;">
+    <h1 id="margn-bttm">New</h1>
       <h1 >This Week</h1>
+      </div>
+      
       <br>
 
       <div id="carouselExampleCaptions" class="carousel slide">
@@ -165,11 +168,78 @@
 <br>
 
 <!-- XIV Section -->
-      
+  <div id="xivSectin" style="margin-left: 20px;">
+    <h1>XIV</h1>
+    <h1>Collections</h1>
+    <h1>2024-2025</h1>
+  </div>
+<br>
+<ul id="xivSectin-catagory-filter" style="margin-left: 20px;">
+  <li>ALL</li>
+  <li>Men</li>
+  <li>Women</li>
+  <li>Kids</li>
+  </ul>
+  <br>
+<!-- grid section -->
 
-
-
-
+<div id="xivSectin-grid">
+  <!-- CARD 1 -->
+  <div id="xivSectin-grid-card">
+    <img src="https://xcdn.next.co.uk/Common/Items/Default/Default/ItemImages/3_4Ratio/SearchINT/Lge/668828.jpg?im=Resize,width=450" style="width: 90%; height: 450px; ">
+     <p style="margin-top: 10px; margin-bottom: 0px;">COTTON T-SHIRT</p>
+    <div id="xivSectin-grid-card-text">
+    <h4>Soft Wash T-shirt</h4>
+    <p>price : 15$</p>
+    </div>
+  </div>
+  <!-- Card 2 -->
+    <div id="xivSectin-grid-card">
+    <img src="https://xcdn.next.co.uk/Common/Items/Default/Default/ItemImages/3_4Ratio/SearchINT/Lge/668828.jpg?im=Resize,width=450" style="width: 90%; height: 450px; ">
+    <p>COTTON T-SHIRT</p>
+    <div id="xivSectin-grid-card-text">
+    <h4>Soft Wash T-shirt</h4>
+    <p>price : 15$</p>
+    </div>
+  </div>
+  <!-- CARD 3 -->
+   <div id="xivSectin-grid-card">
+    <img src="https://xcdn.next.co.uk/Common/Items/Default/Default/ItemImages/3_4Ratio/SearchINT/Lge/668828.jpg?im=Resize,width=450" style="width: 90%; height: 450px; ">
+    <p>COTTON T-SHIRT</p>
+    <div id="xivSectin-grid-card-text">
+    <h4>Soft Wash T-shirt</h4>
+    <p>price : 15$</p>
+    </div>
+</div>
+</div>
+<br>
+<div id="xivSectin-more">
+  <p>MORE</p>
+  </div>
+  <div id="xivSectin-more-btn">
+  <button><i class="bi bi-chevron-down"></i></button>
+  </div>
+<br>
+<br>
+<!-- Approach to Fasion -->
+ <div id="arpoachTFshion">
+  <h1>OUR APPROACH TO FASHION DESIGN</h1>
+  <p>Lorem ipsum dolor sit amet consectetur</p>
+  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum quisquam quasi repellat saepetryrtujrthyrthy</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse voluptate id in? Magnam repellatfgfdgfdgeyyjutjythjsr</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+ </div>
+ <br>
+ <br>
+ <!-- sectin of random photos -->
+<div id="random-Photots">
+  <img id="random-Photots-img1" src="https://www.reiss.com/cms/resource/blob/1090804/78d3c816b7a9448d5e12c1b3925706ad/reiss-mw-lp-2506-shirts-data.jpg">
+  <img id="random-Photots-img2" src="https://m.media-amazon.com/images/I/61xW4zQE2EL._UY1000_.jpg">
+  <img id="random-Photots-img3" src="https://images.squarespace-cdn.com/content/v1/63f6daebd6676f7b4398743a/0e300bca-068b-4be5-a5ba-7d8330515716/Chic_ModestFashion_Highlight.jpg">
+  <img id="random-Photots-img4" src="https://hips.hearstapps.com/hmg-prod/images/mhl-mens-cloth-huckberry-749-67c1ded533637.jpg?crop=0.213xw:0.426xh;0.402xw,0.135xh&resize=1120:*">
+</div>
+<br>
+<br>
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
