--- a/client/homeProject.html
+++ b/client/homeProject.html
@@ -60,11 +60,11 @@
                 <!-- <span class=" bi-arrow-right"> </span> -->
             </button>
 
-         <button class="carousel-control-btn" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-    <span class="bi bi-arrow-right-square"></span>
-  </button>
-    <button class="carousel-control-btn2" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+         <button class="carousel-control-btn" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
     <span class="bi bi-arrow-left-square"></span>
+  </button>
+    <button class="carousel-control-btn2" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+    <span class="bi bi-arrow-right-square"></span>
   </button>
         </div>
 
