--- a/client/homeProject.html
+++ b/client/homeProject.html
@@ -157,10 +157,10 @@
   </div>
 <br>
 <ul id="xivSectin-catagory-filter" style="margin-left: 20px;">
-  <li>ALL</li>
-  <li>Men</li>
-  <li>Women</li>
-  <li>Kids</li>
+  <li><button type="button">ALL</button></li>
+  <!-- <li><button type="button">Men</button></li>
+  <li><button type="button">Women</button></li>
+  <li><button type="button">Kids</button></li> -->
   </ul>
   <br>
 <!-- grid section -->
