--- a/client/homeProject.html
+++ b/client/homeProject.html
@@ -75,7 +75,7 @@
 
   <div class="carousel-inner" id="carouselInner">
 
-    <div class="carousel-item active">
+    <div class="carousel-item ">
       <img src="https://nobero.com/cdn/shop/files/WhatsAppImage2024-05-28at3.25.45PM_9998f9b9-0b79-4b87-817a-e11389282390.jpg?v=1751884158"  alt="...">
     </div>
 
