--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -97,7 +97,7 @@
             <input type="text" class="form-control" id="userRole">
             </div>
             <div class="mb-3">
-            <input type="hidden" class="form-control" id="userId">
+            <input type="text" class="form-control" id="userId">
             </div>
                <button type="submit" class="btn btn-primary">Save changes</button>
         </form>
